# trip_planner

./: .git-blame-ignore-revs  .gitignore  .webui_secret_key  ARCHITECTURE.md  CLAUDE.md  NOW.md  PLAN.md  README.md  ROADMAP.md  copilot-instructions.md  justfile
.claude/skills/chakra-ui/: SKILL.md
.claude/skills/fastapi/: SKILL.md
.github/workflows/: ci.yml
.planning/: CI_CD_WORKFLOW.md  IMPLEMENTATION_PLAN.md  INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: ARCHITECTURE-7c4e9d21.json  CI_CD_WORKFLOW-9d0fc1a8.json  CLAUDE-md-c1a40d4e.json  IMPLEMENTATION_PLAN-a3f1c8b2.json  README-7a3f9c2e.json  ROADMAP-md-d4a7e2b1.json  now-3a7b2e91.json  phase-4-1-llm-provider-config-7c3f9a2b.json  pre-phase-4-refactor-7f3e2a91.json
backend/: .env.example  README.md  pyproject.toml  ruff.toml
backend/app/: chat.py  config.py  exceptions.py  main.py  models.py  routes.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  chat.py  flights.py  health.py  routes.py
backend/app/clients/: flight.py
backend/app/domain/: chat.py  models.py  session.py  types.py
backend/app/infrastructure/clients/: base.py  flight.py  mock.py
backend/app/infrastructure/llm/: factory.py  provider.py
backend/app/infrastructure/storage/: session.py
backend/app/models/: chat.py  flight.py
backend/app/services/: flight.py  provider_probe.py
backend/app/tools/: __init__.py  flight_client.py  flight_search.py  retry.py
backend/app/utils/: retry.py
backend/src/app/: __init__.py
backend/tests/: __init__.py  conftest.py  test_chat.py  test_chat_with_tools.py  test_e2e.py  test_e2e_manual.py  test_exceptions.py  test_flight_models.py  test_flight_service.py  test_health.py  test_mock_client.py  test_retry.py
backend/tests/e2e/: README.md  __init__.py  test_e2e.py  test_e2e_manual.py  test_placeholder.py
backend/tests/fixtures/: mock_llm.py
backend/tests/integration/: __init__.py  test_auth_flow.py  test_auth_routes.py  test_chat.py  test_chat_service_mocked_llm.py  test_chat_with_tools.py  test_flight_tool.py  test_flights_api.py  test_health.py  test_session.py  test_session_probe.py
backend/tests/unit/: __init__.py  test_auth.py  test_auth_me.py  test_chat_service.py  test_exceptions.py  test_flight_models.py  test_mock_client.py  test_provider_probe.py  test_retry.py  test_session.py
frontend/: README.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  main.tsx  test-setup.ts
phases/: phase-4.1-llm-provider-config.md  pre-phase-4-refactor.md
(+54 files in other folders)
